Layout form, fix cards alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ nav a {
 main {
     margin-top: 90px;
 }
+
 section {
     width: 100%;
     padding: 1em 4em;
@@ -49,12 +50,47 @@ section {
     align-items: stretch;
 }
 
-.card {
-    width: 30%;
+/* Form */
+section.middle {
+    justify-content: center;
+}
+
+form {
+    border: 1px solid black;
     padding: 1em 2em;
+    width: 50%;
+}
+
+form .field {
+    display: flex;
+    flex-direction: row;
+    margin: 1em;
+}
+
+form .field > label {
+    flex: 1;
+}
+
+form .field :last-child {
+    flex: 2;
+}
+
+form .button-set {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+form button {
+    margin: 4px;
+}
+
+/* Card */
+.card {
+    width: calc(100% / 3 - 2em);
+    padding: 1em 2em 1em 2em;
     margin: 1em;
     border: 1px solid black;
-    border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
